[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/PlayerCamera.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 320, 80 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 320, 180 )

[node name="PlayerCamera" type="Camera2D"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 1 )
camera_offset = 160

[node name="StaticBody2D" type="Area2D" parent="." index="0" groups=[
"Bound",
]]

position = Vector2( 320, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]

position = Vector2( 0, -79 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="Area2D" parent="." index="1" groups=[
"Bound",
]]

position = Vector2( 320, 360 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2" index="0"]

position = Vector2( 0, 80 )
shape = SubResource( 1 )

[node name="CameraView" type="Area2D" parent="." index="2"]

position = Vector2( 320, 180 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraView" index="0"]

shape = SubResource( 2 )

[connection signal="body_entered" from="StaticBody2D" to="." method="_on_StaticBody2D_body_entered"]

[connection signal="body_entered" from="StaticBody2D2" to="." method="_on_StaticBody2D2_body_entered"]

[connection signal="body_entered" from="CameraView" to="." method="_on_CameraView_body_entered"]


